# turtlesim_ws

./: README.md
log/: latest_list
src/lidar_py_pkg/: package.xml  setup.cfg  setup.py
src/lidar_py_pkg/lidar_py_pkg/: lidar_data_node.py
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/launch/: my_robot_gazebo.launch.xml
src/my_robot_bringup/worlds/: test_world.world
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: display.launch.py  display.launch.xml
src/my_robot_description/rviz/: urdf.rviz
src/my_robot_description/urdf/: camera.xacro  lidar.xacro  main.xacro  my_robot.xacro  properties.xacro  properties_gazebo.xacro
src/simple_bringup/: CMakeLists.txt  package.xml
src/simple_bringup/launch/: television_app.launch.py
src/simple_interface_pkg/: CMakeLists.txt  package.xml
src/simple_interface_pkg/msg/: ComponentsStatus.msg
src/simple_py_pkg/: package.xml  setup.cfg  setup.py
src/simple_py_pkg/simple_py_pkg/: add_two_ints_client.py  add_two_ints_client_oop.py  add_two_ints_server.py  channel_node.py  components_status_publisher.py  counter_node.py  multiply_two_ints_client_oop.py  multiply_two_ints_server.py  remote_controller_node.py  robot_command.py  simple_py_node.py  template_node.py
src/simple_robot_description/: CMakeLists.txt  package.xml
src/simple_robot_description/launch/: display.launch.py  display.launch.xml
src/simple_robot_description/urdf/: simple_robot.urdf
src/turtlesim_application/: package.xml  setup.cfg  setup.py
src/turtlesim_application/turtlesim_application/: coordinate_info_server.py  draw_triangle.py  go_to_loc.py  spawn_turtle.py  triangle_corner.py
src/turtlesim_bringup/: CMakeLists.txt
src/turtlesim_bringup/launch/: catch_turtle_app.launch.py  turtle_application.py
src/turtlesim_interfaces/: CMakeLists.txt  package.xml
src/turtlesim_py_pkg/: package.xml  setup.cfg  setup.py
src/turtlesim_py_pkg/turtlesim_py_pkg/: go_to_loc.py  spawn_turtle.py
src/xacro/: colors.xacro  main.xacro  simple_robot.urdf  test.xacro
turtlesim_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
turtlesim_ws/src/install/turtlesim_py_pkg/lib/turtlesim_py_pkg/: go_to_loc  vel_contoller
turtlesim_ws/src/install/turtlesim_py_pkg/share/turtlesim_py_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
turtlesim_ws/src/log/: latest_build
turtlesim_ws/src/turtlesim_bringup/: package.xml
turtlesim_ws/src/turtlesim_interfaces/: CMakeLists.txt
turtlesim_ws/src/turtlesim_py_pkg/turtlesim_py_pkg/: go_to_loc.py  vel_controller.py
