<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlesim_interfaces</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yasin@todo.todo">yasin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- derleme sırasında gerekli paketler (mesaj ve servis oluşturur)-->
  <build_depend>rosidl_default_generators</build_depend>
  <!-- Çalışma zamanında gerekli paketler (mesaj ve servis çalışma zamanı için erişebilir hale getirir)-->
  <exec_depend>rosidl_default_runtime</exec_depend>

<!-- paketi belirli bir guruba eklemek için kullanılır
     bu pakette: mesaj ve service paketlerini otomatik yönetilmesini sağlar
 -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  <!-- ament : paketlerini derlemek, test etmek, bağımlılıkları yönetmek ve dağıtmak için kullanılır -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
